@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3731 2003/10/24 21:57:02 cube Exp $
+$NetBSD: CHANGES,v 1.3732 2003/10/24 22:00:08 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -4245,3 +4245,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated ntp to 4.2.0 [fredb 2003-10-24]
 	Updated nabi to 0.9 [jmmv 2003-10-24]
 	Updated gtksourceview to 0.7.0 [cube 2003-10-24]
+	Updated opera7 to 7.21 [jdolecek 2003-10-24]
